--- a/UI/signUp/signUp.css
+++ b/UI/signUp/signUp.css
@@ -110,6 +110,11 @@ input{
     justify-content: space-around;
 }
 
+a{
+    color : #bf184e;
+    text-decoration: none
+}
+
 @media (max-width: 800px){
 .form-container{
     width: 70%;
