--- a/UI/landing/landing.css
+++ b/UI/landing/landing.css
@@ -36,6 +36,31 @@
     padding-right: 20px
 }
 
+.cart{
+    display: flex;
+    justify-content: space-between;
+    font-size: 14px;
+}
+
+.cart-div{
+    font-size: 12px;
+    text-decoration: none;
+    color: black;
+    text-align: center;
+    line-height: 0.5;
+    display: block;
+    padding: 6px 0px
+}
+
+.cart>div{
+text-align: center;
+padding-right: 10PX
+}
+
+.paddin{
+    padding: 0px
+}
+
 .main_section{
     padding: 10px 30px
 }
