--- a/UI/login/login.css
+++ b/UI/login/login.css
@@ -1,3 +1,15 @@
 .form-container {
     max-height: 400px;
 }
+
+.submit-form{
+    background: #bf184e;
+    padding:10px;
+    color: white;
+    margin-bottom: 8px;
+    line-height: 1.5;
+    border: none;
+    margin-bottom: 20px;
+    width: 80%;
+    font-size: 12px;
+}
