--- a/UI/login/login.css
+++ b/UI/login/login.css
@@ -1,7 +1,12 @@
 .form-container {
     max-height: 400px;
 }
-
+.logo{
+    height: 40px;
+}
+.logo>a>img{
+    height: 100%;
+}
 .submit-form{
     background: #bf184e;
     padding:10px;
@@ -12,4 +17,18 @@
     margin-bottom: 20px;
     width: 80%;
     font-size: 12px;
+}
+@media (max-width: 860px){
+    .form-container {
+        width: 60%;
+        /* max-height: 550px; */
+    }
+
+}
+@media (max-width: 800px){
+    .form-container {
+        width: 80%;
+        /* max-height: 550px; */
+    }
+
 }
