--- a/UI/signUp/signUp.css
+++ b/UI/signUp/signUp.css
@@ -83,6 +83,10 @@
     text-align: center
 }
 
+.signInLogo{
+    max-width: 90px
+}
+
 .submit{
     background: #bf184e;
     padding:10px;
@@ -115,10 +119,25 @@ a{
     text-decoration: none
 }
 
-@media (max-width: 800px){
+/* @media (max-width: 800px){
 .form-container{
     width: 70%;
     max-height: 550px;
 }
+
+} */
+
+@media (max-width: 860px){
+    .form-container {
+        width: 70%;
+        max-height: 550px;
+    }
+
+}
+@media (max-width: 800px){
+    .form-container {
+        width: 90%;
+        max-height: 550px;
+    }
 
 }
